--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,19 @@ reqwest = { version = "0.12", default-features = false, features = [
 reqwest-hickory-resolver = "0.1"
 rusqlite = { version = "0.32.1" }
 serde = { version = "1.0.164", features = ["derive", "rc"] }
+serde_json = "1.0"
 tempfile = "3.13.0"
 thiserror = { version = "1" }
 toml = "0.8.14"
 tokio = { version = "1.35.0", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v7"] }
+tonic = "0.11"
+prost = "0.12"
+tokio-stream = "0.1"
+futures = "0.3.31"
+
+[build-dependencies]
+tonic-build = "0.11"
 
 [profile.release]
 lto = true
