Improve streaming WAL replication and replica checkpoint tuning

--- a/etc/sample.toml
+++ b/etc/sample.toml
@@ -4,8 +4,11 @@ dir = "/var/log/replited/"
 
 [[database]]
 db = "/var/sqlite/test.db"
+# Replica-side WAL apply tuning (optional, defaults shown)
+# apply_checkpoint_frame_interval = 128     # frames before forcing checkpoint on replica
+# apply_checkpoint_interval_ms = 2000       # max ms between replica checkpoints
 
-# each database has at least one replicate backend, 
+# each database has at least one replicate backend,
 # each replication config in one db MUST has different name
 
 # sample of azure blob replicate config
