--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,4 @@
 [target.aarch64-unknown-linux-gnu]
-pre-build = ["apt-get update && apt-get install -y protobuf-compiler"]
+pre-build = [
+    "apt-get update && apt-get install -y protobuf-compiler libsqlite3-dev",
+]
