--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "replited"
-version = "0.2.6"
+version = "0.2.7"
 edition = "2024"
 rust-version = "1.88"
 description = "Replicate SQLite Daemon"
@@ -33,7 +33,7 @@ reqwest = { version = "0.12", default-features = false, features = [
   "rustls-tls-native-roots",
 ] }
 reqwest-hickory-resolver = "0.1"
-rusqlite = { version = "0.32.1" }
+rusqlite = { version = "0.32.1", features = ["bundled"] }
 serde = { version = "1.0.164", features = ["derive", "rc"] }
 serde_json = "1.0"
 tempfile = "3.13.0"
@@ -44,7 +44,6 @@ uuid = { version = "1.10.0", features = ["v7"] }
 tonic = "0.11"
 prost = "0.12"
 tokio-stream = "0.1"
-futures = "0.3.31"
 
 [build-dependencies]
 tonic-build = "0.11"
