--- a/Cross.toml
+++ b/Cross.toml
@@ -1,4 +1,2 @@
 [target.aarch64-unknown-linux-gnu]
-pre-build = [
-    "apt-get update && apt-get install -y protobuf-compiler libsqlite3-dev",
-]
+pre-build = ["apt-get update && apt-get install -y protobuf-compiler"]
