--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ async-trait = { version = "0.1.81" }
 backtrace = "0.3.73"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.2", features = ["derive"] }
-opendal = { version = "0.50.0", features = [
+opendal = { version = "0.50.0", optional = true, features = [
   "layers-fastrace",
   "layers-async-backtrace",
   "services-azblob",
@@ -21,6 +21,8 @@ opendal = { version = "0.50.0", features = [
   "services-s3",
 ] }
 log = "0.4.17"
+
+
 logforth = { version = "0.28.1", features = ["starter-log"] }
 lz4 = "1.26.0"
 parking_lot = "0.12.1"
@@ -46,12 +48,20 @@ prost = "0.12"
 tokio-stream = "0.1"
 zstd = "0.13.3"
 
+[features]
+default = ["storage"]
+storage = ["dep:opendal"]
+
 [build-dependencies]
 tonic-build = "0.11"
 
 [profile.release]
 lto = true
 codegen-units = 1
+
+[lib]
+name = "replited"
+path = "src/lib.rs"
 
 [[bin]]
 name = "replited"
