feat(fuzz): add comprehensive fuzzing target suite
- Refactor fuzz target to use  library directly (DRY)
- Add storage feature flag to isolate  dependency
- Add alignment assertion to  function
- Add new fuzz targets: , ,

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -18,3 +18,24 @@ path = "fuzz_targets/checksum.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "wal_parser"
+path = "fuzz_targets/wal_parser.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "decompress"
+path = "fuzz_targets/decompress.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "path_parser"
+path = "fuzz_targets/path_parser.rs"
+test = false
+doc = false
+bench = false
