chore(example): update to PocketBase 0.35.0 and verification scripts
- Update docker-compose to use PocketBase 0.35.0
- Add automated verification script (verify_pocketbase.py) for E2E testing
- Update example configs and README
- Fix log directory creation in battle tests

--- a/example/config/replica.toml
+++ b/example/config/replica.toml
@@ -9,11 +9,6 @@ db = "/pb_data/data.db"
 name = "stream-primary"
 params.type = "stream"
 params.addr = "http://primary-replited:50051"
+apply_checkpoint_interval_ms = 100
 
-[[database]]
-db = "/pb_data/auxiliary.db"
 
-[[database.replicate]]
-name = "stream-aux"
-params.type = "stream"
-params.addr = "http://primary-replited:50051"
