--- a/example/config/replica.toml
+++ b/example/config/replica.toml
@@ -3,12 +3,13 @@ level = "Debug"
 dir = "/tmp/log"
 
 [[database]]
-db = "/pb_data/data.db"
+db = "/pb_data/replica/data.db"
 
 [[database.replicate]]
 name = "stream-primary"
 params.type = "stream"
 params.addr = "http://primary-replited:50051"
+params.remote_db_name = "/pb_data/data.db"
 apply_checkpoint_interval_ms = 100
 
 
