--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -32,39 +32,26 @@ services:
       - replited_net
     command: ["-c", "/etc/replited.toml", "replicate"]
 
-  replica-pocketbase:
-    image: ghcr.io/muchobien/pocketbase:0.35.0
-    container_name: replica-pocketbase
-    depends_on:
-      replica-replited:
-        condition: service_healthy
+  replica-replited:
+    build:
+      context: ..
+      dockerfile: example/replica.Dockerfile
+    container_name: replica-replited
+    restart: always
+    command:
+      - "replica-sidecar"
+      - "--exec"
+      - "/usr/local/bin/pocketbase serve --http=0.0.0.0:8090 --dir=/pb_data/replica"
     volumes:
-      - ./data/replica:/pb_data
+      - ./config/replica.toml:/etc/replited.toml
+      - ./data:/pb_data
     ports:
       - "8091:8090"
     networks:
       - replited_net
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost:8090/api/health || exit 1
+      test: ["CMD-SHELL", "curl -f http://localhost:8090/api/health || exit 1"]
       interval: 5s
-      timeout: 5s
-      retries: 5
-
-  replica-replited:
-    build:
-      context: ..
-      dockerfile: Dockerfile.dev
-    container_name: replica-replited
-    privileged: true
-    volumes:
-      - ./data/replica:/pb_data
-      - ./config/replica.toml:/etc/replited.toml
-    networks:
-      - replited_net
-    command: ["-c", "/etc/replited.toml", "replica-sidecar", "--force-restore"]
-    healthcheck:
-      test: ["CMD-SHELL", "test -f /pb_data/data.db"]
-      interval: 1s
       timeout: 5s
       retries: 30
 
