--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,18 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# Python
+__pycache__/
+*.py[cod]
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+venv/
+.venv/
+
+# Local orchestration notes
+.sisyphus/
+
 .test/
 test.db
 .test_continuous/
