--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ reqwest-hickory-resolver = "0.1"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 serde = { version = "1.0.164", features = ["derive", "rc"] }
 serde_json = "1.0"
+sha2 = "0.10"
 tempfile = "3.13.0"
 thiserror = { version = "1" }
 toml = "0.8.14"
