perf: reduce e2e replication latency and quiet expected startup logs

--- a/tests/config/benchmark_primary.toml
+++ b/tests/config/benchmark_primary.toml
@@ -4,11 +4,12 @@ dir = "logs"
 
 [[database]]
 db = "primary.db"
-min_checkpoint_page_number = 100
-max_checkpoint_page_number = 1000
-truncate_page_number = 50000
-checkpoint_interval_secs = 30
-wal_retention_count = 5
+min_checkpoint_page_number = 500
+max_checkpoint_page_number = 5000
+truncate_page_number = 200000
+checkpoint_interval_secs = 60
+monitor_interval_ms = 50
+wal_retention_count = 20
 
 [[database.replicate]]
 name = "backup"
