--- a/tests/config/benchmark_replica.toml
+++ b/tests/config/benchmark_replica.toml
@@ -8,6 +8,7 @@ min_checkpoint_page_number = 100
 max_checkpoint_page_number = 1000
 truncate_page_number = 50000
 checkpoint_interval_secs = 30
+monitor_interval_ms = 50
 wal_retention_count = 5
 
 [[database.replicate]]
