--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# macOS
+.DS_Store
+
 # Python
 __pycache__/
 *.py[cod]
